--- a/style.css
+++ b/style.css
@@ -8,10 +8,13 @@
   padding: 0;
 }
 
+::selection {
+  color: #72c9a9;
+}
+
 body {
   font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  font-size: larger;
+  font-size: 1.5rem;
 }
 
 /* bei Navigation nicht direkt zu den Elementen springen*/
@@ -27,7 +30,7 @@ p {
 
 a,
 .btn {
-  transition: all 300ms ease;
+  transition: all 150ms ease;
 }
 
 /* Desktop NAV */
@@ -35,12 +38,13 @@ a,
 nav,
 .nav-links {
   display: flex;
+  font-weight: 300;
 }
 
 nav {
   justify-content: space-around;
   align-items: center; /* vh= ViewHight 100 = 100% des Screens */
-  height: 17vh;
+  height: 15vh;
 }
 
 .nav-links {
@@ -51,20 +55,242 @@ nav {
 a {
   color: black;
   text-decoration: none;
-  text-decoration-color: white;
 }
 
 a:hover {
-  color: grey;
+  background: linear-gradient(to right, #c5b4ed, #72c9a9);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   text-decoration: underline;
   text-underline-offset: 1rem; /* Abstand der Linie zum Text */
-  text-decoration-color: rgb(181, 181, 181);
+  text-decoration-color: #c5b4ed;
 }
 
 .logo {
   font-size: 2rem;
+  font-weight: 350;
 }
 
 .logo:hover {
   cursor: default; /* Bei Hover über Logo keine Veränderung */
+}
+
+/* HAMBURGER-Menu */
+
+#hamburger-nav {
+  display: none;
+}
+
+.hamburger-menu {
+  position: relative;
+  display: inline-block;
+}
+
+.hamburger-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
+  width: 30px;
+  cursor: pointer;
+}
+
+.hamburger-icon span {
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: all 0.3 ease-in-out;
+}
+
+/* Hamburger in X umwandeln */
+
+.menu-links {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  width: fit-content;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.5rem;
+  color: black;
+  text-decoration: none;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+  list-style: none;
+}
+
+.menu-links.open {
+  max-height: 300px;
+}
+
+.hamburger-icon.open span:first-child {
+  transform: rotate(45deg) translate(10px, 5px);
+}
+
+.hamburger-icon.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-icon.open span:last-child {
+  transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
+}
+
+.hamburger-icon span:first-child {
+  opacity: 1;
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
+}
+
+/* BEREICHE/SECTIONS */
+
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
+}
+
+.section-container {
+  display: flex;
+}
+
+/* PROFILE SECTION */
+
+#profile {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  height: 80vh;
+}
+
+.section_picture-container {
+  display: flex;
+  height: 450px;
+  width: 450px;
+  margin: auto 0;
+  animation: rotateOnLoad 1s ease-in-out forwards;
+}
+
+@keyframes rotateOnLoad {
+  from {
+    transform: rotate(-10deg) scale(0.95); /* Start: leicht nach links + kleiner */
+  }
+  50% {
+    transform: rotate(5deg) scale(1.05); /* Mitte: leicht nach rechts + größer */
+  }
+  to {
+    transform: rotate(0deg) scale(1); /* Endposition: Normal */
+  }
+}
+
+.section__text {
+  align-self: center;
+  text-align: center;
+}
+
+.section__text p {
+  font-weight: 500;
+}
+
+.section__text__p1 {
+  text-align: center;
+}
+
+.section__text__p2 {
+  font-size: 1.75rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+.section_title {
+  font-size: 3rem;
+  text-align: center;
+}
+h1 {
+  color: #72c9a9;
+  font-size: 3.1rem;
+}
+
+#socials-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  gap: 1rem;
+}
+
+/* ICONS */
+
+.icon {
+  cursor: pointer;
+  height: 2.5rem;
+}
+
+/* Buttons */
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 2rem;
+}
+
+.btn-color-1,
+.btn-color-2 {
+  border: rgb(53, 53, 53) 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  cursor: pointer;
+}
+.btn-color-1 {
+  background: rgb(53, 53, 53);
+  color: white;
+}
+
+.btn-color-2:hover {
+  background: linear-gradient(to right, #c5b4ed, #72c9a9);
+  color: white;
+  border: none;
+}
+
+.btn-color-1:hover {
+  background: linear-gradient(to right, #c5b4ed, #72c9a9);
+  border: none;
+}
+
+.btn-color-2 {
+  background: none;
+}
+
+.btn-color-2:hover {
+  border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+.btn-container {
+  gap: 1rem;
 }
