--- a/style.css
+++ b/style.css
@@ -191,13 +191,13 @@ section {
 
 @keyframes rotateOnLoad {
   from {
-    transform: rotate(-10deg) scale(0.95); /* Start: leicht nach links + kleiner */
+    transform: rotate(-10deg) scale(0.95);
   }
   50% {
-    transform: rotate(5deg) scale(1.05); /* Mitte: leicht nach rechts + größer */
+    transform: rotate(5deg) scale(1.05);
   }
   to {
-    transform: rotate(0deg) scale(1); /* Endposition: Normal */
+    transform: rotate(0deg) scale(1);
   }
 }
 
@@ -424,4 +424,53 @@ article .icon {
 .project-btn {
   color: black;
   border-color: rgb(163, 163, 163);
+}
+/* CONTACT */
+
+#contact {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
+}
+
+.contact-info-upper-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 2rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  background: (250, 250, 250);
+  margin: 2rem auto;
+  padding: 0.5rem;
+}
+
+.contact-info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin: 1rem;
+}
+
+.contact-info-container p {
+  font-size: larger;
+}
+
+.contact-icon {
+  cursor: default;
+}
+
+.email-icon {
+  height: 2.5rem;
+}
+/* FOOTER SECTION */
+
+footer {
+  height: 26vh;
+  margin: 0 1rem;
+}
+
+footer p {
+  text-align: center;
 }
