--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -23,6 +23,17 @@
   .experience-details-container {
     margin-top: 2rem;
   }
+  .titel,
+  .titel__h2 {
+    font-size: 2.5rem;
+  }
+  .section__text__p1 {
+    font-size: 1rem;
+  }
+  .section__text__p2 {
+    font-size: 1rem;
+  }
+
   #profile,
   .section-container {
     display: block;
@@ -42,12 +53,13 @@
     height: 300px;
     margin: 0 auto 2rem;
   }
+  .section_picture-container_about {
+    width: 275px;
+    height: 275px;
+    margin: 0 auto 2rem;
+  }
   .about-containers {
     margin-top: 0;
-  }
-  .about-picture {
-    width: 300px;
-    height: 300px;
   }
 }
 
@@ -90,7 +102,8 @@
     gap: 0.5rem;
     text-align: center;
   }
-  .section_picture-container {
+  .section_picture-container,
+  .section_picture-container_about {
     width: auto;
     height: 46vw;
     justify-content: center;
