--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -57,6 +57,7 @@
     width: 275px;
     height: 275px;
     margin: 0 auto 2rem;
+    padding-top: 2rem;
   }
   .about-containers {
     margin-top: 0;
