--- a/style.css
+++ b/style.css
@@ -433,6 +433,8 @@ article .icon {
   justify-content: center;
   gap: 0.5rem;
   margin: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .contact-info-container p {
